<resources>
    <string name="app_name">Studify</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="create_new_account">Create new account</string>
    <string name="or">OR</string>
    <string name="googlebutton">TODO</string>
    <string name="facebookbutton">TODO</string>
    <string name="twitterbutton">TODO</string>
    <string name="TwitterButon">TODO</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="studifylogo">TODO</string>
    <string name="title_activity_studyset">StudysetActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="study_set">Study Set</string>
    <string name="calendar">Calendar</string>
    <string name="pomodoro_timer">Pomodoro Timer</string>
    <string name="account_settings">Account settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_fragment">Account Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="calendar_fragment">Calendar Fragment</string>
    <string name="pomodoro_fragment">Pomodoro Fragment</string>
    <string name="welcome">Welcome</string>
    <string name="studyset_fragment">studyset fragment</string>
    <string name="your_study_sets">Your Study sets</string>
    <string name="add">add</string>
    <string name="plus">plus</string>
    <string name="close">Close</string>
</resources>